6.2.1 checkin