@@ -16,18 +16,18 @@
         <dependency>
             <groupId>org.oa4mp</groupId>
             <artifactId>oa4mp-server-oauth2</artifactId>
-            <version>6.x-SNAPSHOT</version>
+            <version>6.2.1</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.oa4mp</groupId>
             <artifactId>proxy</artifactId>
-            <version>6.x-SNAPSHOT</version>
+            <version>6.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.oa4mp</groupId>
             <artifactId>server-loader</artifactId>
-            <version>6.x-SNAPSHOT</version>
+            <version>6.2.1</version>
         </dependency>
 
     </dependencies>
@@ -84,7 +84,23 @@
 
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
 
+                    <!-- JDK9+ Add Module MAGIC happens below...          -->
+                    <!-- Add implicit default JDK9+ java.se explicitly    -->
+                    <!-- Add explicit java.desktop for import java.awt.*; -->
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>java.se,java.desktop</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
         </plugins>
         <finalName>oauth2</finalName>
         <resources>
